--- a/Indiv2/ConrellBoxKhoruzhaya/styles.css
+++ b/Indiv2/ConrellBoxKhoruzhaya/styles.css
@@ -94,7 +94,7 @@ th {
 
 body {
   background-size: 300% 300%;
-  background-image: linear-gradient(-45deg, blue, black,  red);
+  background-image: linear-gradient(-45deg, black, red);
   -webkit-animation: AnimateBG 20s ease infinite;
           animation: AnimateBG 20s ease infinite;
   color: white;
